--- a/3_2_buttons.html
+++ b/3_2_buttons.html
@@ -90,15 +90,15 @@
         <!--################START HERE################-->
 
         <!-- BUTTONS -->
-        <button type="button">Primary</button>
-        <button type="button">Secondary</button>
-        <button type="button">Success</button>
-        <button type="button">Info</button>
-        <button type="button">Warning</button>
-        <button type="button">Danger</button>
-        <button type="button">Light</button>
-        <button type="button">Dark</button>
-        <button type="button">Link</button>
+        <button type="button" class="btn btn-primary">Primary</button>
+        <button type="button"class="btn btn-secondery">Secondary</button>
+        <button type="button"class="btn btn-success">Success</button>
+        <button type="button"class="btn btn-info">Info</button>
+        <button type="button"class="btn btn-warning">Warning</button>
+        <button type="button"class="btn btn-danger">Danger</button>
+        <button type="button"class="btn btn-light">Light</button>
+        <button type="button"class="btn btn-dark">Dark</button>
+        <button type="button"class="btn btn-link">Link</button>
 
         <br>
         <br>
