--- a/3_5_forms.html
+++ b/3_5_forms.html
@@ -90,21 +90,29 @@
         <!-- FORM -->
         <form>
             <!-- TEXT FIELD GROUPS -->
-            <div>
+            <div class="form-group">
                 <label for="name">Name</label>
-                <input type="text" id="name" placeholder="Enter name">
+                <input class="form-control" type="text"  id="name" placeholder="Enter name">
             </div>
             <div>
                 <label for="email">Email address</label>
-                <input type="email" id="email" placeholder="Enter email">
+                <input class="form-control" type="email"  id="email" placeholder="Enter email">
             </div>
             <div>
                 <label for="company">Company</label>
-                <input type="text" id="company" placeholder="Enter company name">
+                <input class="form-control" type="text" id="company" placeholder="Enter company name">
             </div>
             <div>
                 <label for="password">Password</label>
-                <input type="password" id="password" placeholder="Password">
+                <input class="form-control" type="password" id="password" placeholder="Password">
+            </div>
+            <!-- SELECT -->
+            <div>
+                <label for="gender">Gender</label>
+                <select id="gender">
+                    <option>Male</option>
+                    <option>Female</option>
+                </select>
             </div>
             <!-- SELECT -->
             <div>
@@ -115,12 +123,12 @@
                 </select>
             </div>
             <!-- TEXTAREA -->
-            <div>
+            <div class="textarea">
                 <label for="message">Message</label>
                 <textarea id="message" rows="3"></textarea>
             </div>
             <!-- FILE INPUT -->
-            <div>
+            div>
                 <label for="file">File input</label>
                 <input type="file" id="file">
                 <small id="fileHelp">Max 3mb size</small>
